Rest board functionality

--- a/game.html
+++ b/game.html
@@ -9,6 +9,9 @@
 <body>
 <div id="scorebar" class="scorebar">
 Score: <span id="score">0</span>
+    <span class="controls">
+        <button class="control" type="button" onclick="com.letstalkdata.hexiles.HexilesApp().resetBoard()">Reset Board</button>
+    </span>
 </div>
 <div id="canvas-holder">
     <canvas id="game-canvas" width="600" height="580"></canvas>
