--- a/game.html
+++ b/game.html
@@ -40,7 +40,7 @@
 
     </div>
     <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="./target/scala-2.11/hexiles-web-opt.js"></script>
+    <script type="text/javascript" src="hexiles-web-opt.js"></script>
     <!-- Run tutorial.webapp.TutorialApp -->
     <script type="text/javascript">
       com.letstalkdata.hexiles.HexilesApp().main();
