--- a/game.html
+++ b/game.html
@@ -15,6 +15,7 @@
             <div id="instructions-0" class="instructions" onclick="instructionsNext(0)">
                 <p>The goal of this game is to fit five of the tiles onto the board.</p>
                 <img src="img/solved-example.png" />
+                <p>You get one point for each unique solution.</p>
                 <p>Click anywhere to continue...</p>
             </div>
             <div id="instructions-1" class="instructions" hidden onclick="playGame()">
