chore: Bump, tidy up, redefine Point

--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -5,8 +5,8 @@
     <title>Hexiles</title>
     <script type="application/javascript" src="/workbench.js"></script>
     <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="./target/scala-2.11/hexiles-web-fastopt.js"></script>
-    <script type="text/javascript" src="./target/scala-2.11/hexiles-web-jsdeps.js"></script>
+    <script type="text/javascript" src="../hexiles-web-fastopt.js"></script>
+    <script type="text/javascript" src="../hexiles-web-jsdeps.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href="styles.css" rel="stylesheet"/>
